# opam-sysinstall

./: README.md  dune-project  opam-sysinstall.opam
.github/workflows/: test.yml
lib/: dune  ocaml.ml  ocaml.mli  opam.ml  opam.mli  opam_sysinstall.ml  opam_sysinstall.mli
